@@ -1,5 +1,7 @@
 7 February 2019: Wouter
 	- Fix #4206: OpenSSL 1.0.2 hostname verification for FreeBSD 11.2.
+	- Fix that qname minimisation does not skip a label when missing
+	  nameserver targets need to be fetched.
 
 4 February 2019: Wouter
 	- Fix that log-replies prints the correct name for local-alias
